testsuite/tests/parser/should_fail/T15209.hs
{-# LANGUAGE GADTs, TypeOperators #-}
module T15209 where

import GHC.Exts

foo :: a ~# Int -> ()
foo = ()
