testsuite/tests/parser/should_fail/T15209.stderr

T15209.hs:6:10: error:
    Not in scope: type constructor or class ‘~#’
    Suggested fix: Perhaps use ‘~’ (imported from Prelude)
